--- a/index.html
+++ b/index.html
@@ -32,23 +32,19 @@
 
                 <p id="trainText">Current Train Schedule</p>
 
-                <div class="row" id="add-info">
+                <div class="table" id="add-info">
 
-                    <div class="col-lg-3">
-                        <p><strong>Train Name</strong></p>
-                    </div>
+                    <table>
 
-                    <div class="col-lg-3">
-                        <p><strong>Destination</strong></p>
-                    </div>
+                        <tr>
+                            <th>Train Name</th>
+                            <th>Destination</th>
+                            <th>Frequency</th>
+                            <th>Next Arrival</th>
+                            <th>Minutes Away</th>
+                        </tr>
 
-                    <div class="col-lg-3">
-                        <p><strong>Time</strong></p>
-                    </div>
-
-                    <div class="col-lg-3">
-                        <p><strong>Frequency</strong></p>
-                    </div>
+                    </table>
 
                 </div>
 
